[gd_scene load_steps=28 format=3 uid="uid://dkr20fa66bggt"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dqmlu2ipqo0er" path="res://Fonts/Gugi-Regular.ttf" id="3"]
[ext_resource type="Script" path="res://Scripts/MenuButtons.gd" id="4"]
[ext_resource type="FontFile" path="res://Scenes/font.tres" id="5"]
[ext_resource type="Script" path="res://Scripts/Score.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/Buttons.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://b0ovdvy0w5qnf" path="res://Sprites/Basic/Banner.png" id="8"]
[ext_resource type="Script" path="res://Scripts/Area2D.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://kliwd1tljcdq" path="res://assets/txt img/4th.jpg" id="10_iqr01"]
[ext_resource type="Script" path="res://Scripts/Color.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://ku6xsg1yd22l" path="res://assets/txt img/1st.jpg" id="12_5qkg3"]
[ext_resource type="Texture2D" uid="uid://bgkctpx1k4d1d" path="res://assets/images/SW.jpg" id="13_igarg"]
[ext_resource type="Texture2D" uid="uid://dyagn4kn5sdrd" path="res://assets/txt img/7th.jpg" id="14_r3ejd"]
[ext_resource type="Texture2D" uid="uid://7ibdqfnb51th" path="res://assets/txt img/8th.jpg" id="15_fdu2y"]
[ext_resource type="Texture2D" uid="uid://bwth1mqucod7g" path="res://assets/txt img/5th.jpg" id="16_6xudj"]
[ext_resource type="Texture2D" uid="uid://cg1r8qyv1v41a" path="res://assets/txt img/6th.jpg" id="17_dba46"]
[ext_resource type="Texture2D" uid="uid://2kb8vbjeh0qf" path="res://assets/txt img/2nd.jpg" id="18_id1k4"]
[ext_resource type="Texture2D" uid="uid://byanhapjb2w8q" path="res://assets/txt img/3rd.jpg" id="19_f51on"]
[ext_resource type="Texture2D" uid="uid://7a5f8hgjh2dj" path="res://Sprites/Basic/TopButton.png" id="20"]
[ext_resource type="Script" path="res://Scripts/Arrow.gd" id="21"]
[ext_resource type="Script" path="res://Scripts/Emitters.gd" id="22"]
[ext_resource type="Script" path="res://Scenes/Globals.gd" id="23"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/80/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/80/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/80/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(23.9474, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
color = Color(0.835294, 0.835294, 0.835294, 1)

[node name="UI" type="Node2D" parent="."]
position = Vector2(0, 100)
script = ExtResource("2")

[node name="Title" type="Label" parent="UI"]
offset_top = 150.0
offset_right = 576.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 60
text = "Endemic Animals"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="Node2D" parent="UI"]
script = ExtResource("4")

[node name="StartButton" type="TextureButton" parent="UI/MenuButtons"]
offset_left = 88.0
offset_top = 350.0
offset_right = 488.0
offset_bottom = 440.0

[node name="Start" type="Label" parent="UI/MenuButtons/StartButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="UI/MenuButtons"]
offset_left = 88.0
offset_top = 440.0
offset_right = 488.0
offset_bottom = 530.0

[node name="Settings" type="Label" parent="UI/MenuButtons/SettingsButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="UI/MenuButtons"]
offset_left = 88.0
offset_top = 530.0
offset_right = 488.0
offset_bottom = 620.0

[node name="Quit" type="Label" parent="UI/MenuButtons/QuitButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultyButtons" type="Node2D" parent="UI"]
position = Vector2(576, 0)
script = ExtResource("4")

[node name="HardButton" type="TextureButton" parent="UI/DifficultyButtons"]
offset_left = 88.0
offset_top = 350.0
offset_right = 488.0
offset_bottom = 440.0

[node name="Hard" type="Label" parent="UI/DifficultyButtons/HardButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Not Easy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HarderButton" type="TextureButton" parent="UI/DifficultyButtons"]
offset_left = 88.0
offset_top = 440.0
offset_right = 488.0
offset_bottom = 530.0

[node name="Harder" type="Label" parent="UI/DifficultyButtons/HarderButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Pretty Difficult"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HardestButton" type="TextureButton" parent="UI/DifficultyButtons"]
offset_left = 88.0
offset_top = 530.0
offset_right = 488.0
offset_bottom = 620.0

[node name="Hardest" type="Label" parent="UI/DifficultyButtons/HardestButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Just Bad"

[node name="BackButton" type="TextureButton" parent="UI/DifficultyButtons"]
offset_left = 88.0
offset_top = 670.0
offset_right = 488.0
offset_bottom = 760.0

[node name="Back" type="Label" parent="UI/DifficultyButtons/BackButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreNode" type="Node2D" parent="."]
position = Vector2(0, -400)
script = ExtResource("6")

[node name="Score" type="Label" parent="ScoreNode"]
offset_right = 576.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0.753906, 0.753906, 0.753906, 1)
theme_override_fonts/font = SubResource("2")
text = "0"

[node name="HighScore" type="Label" parent="ScoreNode"]
offset_left = 313.741
offset_top = -140.658
offset_right = 576.741
offset_bottom = -90.6584
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 40
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButtonDifficulty" type="TextureButton" parent="ScoreNode"]
offset_left = 7.0
offset_top = -140.0
offset_right = 143.0
offset_bottom = -90.0

[node name="Back" type="Label" parent="ScoreNode/BackButtonDifficulty"]
layout_mode = 0
offset_left = 21.0
offset_right = 121.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 40
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndOptions" type="Node2D" parent="ScoreNode"]
position = Vector2(576, -40)
script = ExtResource("4")

[node name="RestartButton" type="TextureButton" parent="ScoreNode/EndOptions"]
offset_left = 88.0
offset_top = 350.0
offset_right = 488.0
offset_bottom = 440.0

[node name="Hard" type="Label" parent="ScoreNode/EndOptions/RestartButton"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 60
text = "Try Again?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="TextureButton" parent="ScoreNode/EndOptions"]
visible = false
offset_left = 88.0
offset_top = 440.0
offset_right = 488.0
offset_bottom = 530.0

[node name="Harder" type="Label" parent="ScoreNode/EndOptions/Menu"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_fonts/font = ExtResource("5")
text = "Difficulty"

[node name="Buttons" type="Node2D" parent="."]
position = Vector2(0, 1024)
script = ExtResource("7")

[node name="Sprite2D" type="Sprite2D" parent="Buttons"]
z_index = 3
position = Vector2(288.647, 267.748)
texture = ExtResource("8")

[node name="Area2D" type="Area2D" parent="Buttons/Sprite2D"]
position = Vector2(-0.304352, -213.099)
scale = Vector2(8.8265, 0.294218)
script = ExtResource("9")
areaType = "Barrier"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buttons/Sprite2D/Area2D"]
position = Vector2(-0.133953, -56.2468)
scale = Vector2(2.69723, 1)
shape = SubResource("4")

[node name="Colors" type="Node2D" parent="Buttons"]
z_index = 5

[node name="Orange" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 268.45
offset_right = 188.0
offset_bottom = 369.45
scale = Vector2(0.278606, 0.313747)
texture_normal = ExtResource("10_iqr01")
script = ExtResource("11")
color = "Orange"

[node name="Blue" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 156.0
offset_right = 643.0
offset_bottom = 465.0
scale = Vector2(0.280931, 0.327796)
texture_normal = ExtResource("12_5qkg3")
script = ExtResource("11")
color = "Blue"

[node name="DiffGreen" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 387.919
offset_top = 378.588
offset_right = 563.919
offset_bottom = 479.588
scale = Vector2(0.135404, 0.102724)
texture_normal = ExtResource("13_igarg")
script = ExtResource("11")
color = "DiffGreen"

[node name="DiffRed" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 379.319
offset_right = 188.0
offset_bottom = 480.319
scale = Vector2(0.281595, 0.322902)
texture_normal = ExtResource("14_r3ejd")
script = ExtResource("11")
color = "DiffRed"

[node name="DiffBlue" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 199.673
offset_top = 379.156
offset_right = 375.673
offset_bottom = 480.156
scale = Vector2(0.282569, 0.321372)
texture_normal = ExtResource("15_fdu2y")
script = ExtResource("11")
color = "DiffBlue"

[node name="Purple" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 199.507
offset_top = 268.45
offset_right = 375.507
offset_bottom = 369.45
scale = Vector2(0.284039, 0.316672)
texture_normal = ExtResource("16_6xudj")
script = ExtResource("11")
color = "Purple"

[node name="Yellow" type="TextureButton" parent="Buttons/Colors"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 388.454
offset_top = 268.45
offset_right = 564.454
offset_bottom = 369.45
scale = Vector2(0.280071, 0.326772)
texture_normal = ExtResource("17_dba46")
script = ExtResource("11")
color = "Yellow"

[node name="Green" type="TextureButton" parent="Buttons/Colors"]
offset_left = 200.0
offset_top = 156.0
offset_right = 376.0
offset_bottom = 256.0
scale = Vector2(0.280674, 0.322779)
texture_normal = ExtResource("18_id1k4")
script = ExtResource("11")
color = "Green"

[node name="Red" type="TextureButton" parent="Buttons/Colors"]
offset_left = 388.0
offset_top = 155.538
offset_right = 565.131
offset_bottom = 255.538
scale = Vector2(0.276224, 0.325611)
texture_normal = ExtResource("19_f51on")
script = ExtResource("11")
color = "Red"

[node name="Arrows" type="Node2D" parent="Buttons"]
z_index = 5

[node name="LeftArrow" type="TextureButton" parent="Buttons/Arrows"]
offset_left = 32.0
offset_top = 66.0
offset_right = 168.0
offset_bottom = 141.0
texture_normal = ExtResource("20")
script = ExtResource("21")

[node name="MiddleArrow" type="TextureButton" parent="Buttons/Arrows"]
offset_left = 220.0
offset_top = 66.0
offset_right = 356.0
offset_bottom = 141.0
texture_normal = ExtResource("20")
script = ExtResource("21")

[node name="RightArrow" type="TextureButton" parent="Buttons/Arrows"]
offset_left = 408.0
offset_top = 66.0
offset_right = 544.0
offset_bottom = 143.0
texture_normal = ExtResource("20")
script = ExtResource("21")

[node name="Emitters" type="Node2D" parent="."]
position = Vector2(576, 0)
script = ExtResource("22")

[node name="MiddleEmitter" type="Node2D" parent="Emitters"]
position = Vector2(288, -100)

[node name="LeftEmitter" type="Node2D" parent="Emitters"]
position = Vector2(100, -100)

[node name="RightEmitter" type="Node2D" parent="Emitters"]
position = Vector2(476, -100)

[node name="Timer" type="Timer" parent="Emitters"]

[node name="Globals" type="Node2D" parent="."]
script = ExtResource("23")

[connection signal="pressed" from="UI/MenuButtons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/MenuButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/DifficultyButtons/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="UI/DifficultyButtons/HarderButton" to="." method="_on_HarderButton_pressed"]
[connection signal="pressed" from="UI/DifficultyButtons/HardestButton" to="." method="_on_HardestButton_pressed"]
[connection signal="pressed" from="UI/DifficultyButtons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ScoreNode/BackButtonDifficulty" to="." method="_on_BackButtonDifficulty_pressed"]
[connection signal="pressed" from="ScoreNode/EndOptions/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Buttons/Colors/Orange" to="Buttons/Colors/Orange" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/Blue" to="Buttons/Colors/Blue" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/DiffGreen" to="Buttons/Colors/DiffGreen" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/DiffRed" to="Buttons/Colors/DiffRed" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/DiffBlue" to="Buttons/Colors/DiffBlue" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/Purple" to="Buttons/Colors/Purple" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/Yellow" to="Buttons/Colors/Yellow" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/Green" to="Buttons/Colors/Green" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Colors/Red" to="Buttons/Colors/Red" method="ChangeColor"]
[connection signal="pressed" from="Buttons/Arrows/LeftArrow" to="Buttons/Arrows/LeftArrow" method="ArrowPressed"]
[connection signal="pressed" from="Buttons/Arrows/MiddleArrow" to="Buttons/Arrows/MiddleArrow" method="ArrowPressed"]
[connection signal="pressed" from="Buttons/Arrows/RightArrow" to="Buttons/Arrows/RightArrow" method="ArrowPressed"]
[connection signal="timeout" from="Emitters/Timer" to="Emitters" method="_on_Timer_timeout"]
